glib-macros/tests/clone_compiletest/10-clone-unsupported-attribute.stderr
error: unsupported attribute `yolo`: only `strong`, `weak`, `weak_allow_none`, `to_owned`, `upgrade_or`, `upgrade_or_else`, `upgrade_or_default` and `upgrade_or_panic` are supported
 --> tests/clone_compiletest/10-clone-unsupported-attribute.rs:4:12
  |
4 |     clone!(#[yolo] v, move || {});
  |            ^^^^^^^
